Add help and make color universal.

--- a/Redfish.conf
+++ b/Redfish.conf
@@ -14,9 +14,11 @@ log_format='%(asctime)s %(name)-12s %(levelname)-8s %(message)s'
 root_level=10
 ch_level=10
 fh_level=20
+
 html_color=color_2
-color_1=err_color: #FF0000, warn_color: #FFFF00, info_color: #FFFFFF, dbg_color:#FFFFFF
-color_2=err_color: #FF0000, warn_color: #FFA500, info_color: #FFFFFF, dbg_color:#FFFFFF
+color_1=err_color: red, warn_color: yellow, info_color: white, dbg_color: white
+color_2=err_color: red, warn_color: orange, info_color: white, dbg_color:blue
+
 Keyword_Italic=True
 Keyword_FontSize=5
 HighLight_msg_tag_start="<hl>"
@@ -24,6 +26,8 @@ HighLight_msg_tag_end="</hl>"
 title=Red fish log
 HtmlmaxBytes=52428800
 console_log=True
+Html_Rotating=True
+Html_backupCount=5
 
 [REQUEST]
 http_time=0.4
