--- a/Redfish.conf
+++ b/Redfish.conf
@@ -15,9 +15,10 @@ root_level=10
 ch_level=10
 fh_level=20
 
-html_color=color_2
-color_1=err_color: red, warn_color: yellow, info_color: white, dbg_color: white
-color_2=err_color: red, warn_color: orange, info_color: white, dbg_color:blue
+html_color=color_1
+color_1=err_color: magenta, warn_color: yellow, info_color: white, dbg_color: white
+color_2=err_color: red, warn_color: orange, info_color: white, dbg_color: blue
+
 
 Keyword_Italic=True
 Keyword_FontSize=5
