--- a/Redfish.conf
+++ b/Redfish.conf
@@ -22,8 +22,8 @@ color_2=err_color: red, warn_color: orange, info_color: white, dbg_color: blue
 
 Keyword_Italic=True
 Keyword_FontSize=5
-HighLight_msg_tag_start="<hl>"
-HighLight_msg_tag_end="</hl>"
+Keyword_tag_start="<hl>"
+Keyword_tag_end="</hl>"
 title=Red fish log
 HtmlmaxBytes=52428800
 console_log=True
